# video-instruct-pix2pix

./: README.md  pyproject.toml
src/: pipeline_instruct_pix2pix_img2img.py
