[tool.poetry]
name = "video-instruct-pix2pix"
version = "0.1.0"
description = "Generate video with InstrucPix2Pix"
authors = ["IzumiSatoshi <izumisatoshi05@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "video_instruct_pix2pix"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = {url="https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-win_amd64.whl"}
torchvision = {url="https://download.pytorch.org/whl/cu117/torchvision-0.14.0%2Bcu117-cp310-cp310-win_amd64.whl"}
diffusers = {git = "https://github.com/huggingface/diffusers.git"}
transformers = "^4.26.0"
accelerate = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
